--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
-  "main": "background.js",
+  "main": "background/index.js",
   "dependencies": {
     "axios": "^0.18.1",
     "core-js": "^3.4.4",
@@ -39,6 +39,7 @@
     "electron": "^6.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^6.1.2",
+    "lzg-generator": "^2.0.6",
     "vue-cli-plugin-electron-builder": "^1.4.4",
     "vue-template-compiler": "^2.6.10"
   },
