--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
-  "main": "background/index.js",
+  "main": "background.js",
   "dependencies": {
     "axios": "^0.18.1",
     "core-js": "^3.4.4",
